--- a/templates/header.html
+++ b/templates/header.html
@@ -12,7 +12,7 @@
                   <span class="icon-pin"></span>
                 </div>
                 <div class="text">
-                  <p>88 broklyn golden street. New York ok</p>
+                  <p>88 broklyn golden street. New York ok ok</p>
                 </div>
               </li>
               <li>
