navbar accueil civ

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -78,7 +78,7 @@
               <ul class="dropdown-menu">
                 <li><a href="">Indicateurs UEMOA/CEDEAO</a></li>
                 <li>
-                  <a href="">CIV dans l'UEMOA</a>
+                  <a href="">La Côte d'Ivoire dans l'UEMOA</a>
                 </li>
               </ul>
             </li>
