--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -47,7 +47,7 @@
       >
         <i class="fa fa-bars"></i>
       </button>
-      <a class="navbar-brand" href="{% url ('/') %}">
+      <a class="navbar-brand" href="">
         <img src="{% static 'assets/img/logo.png' %}" class="logo" alt="Logo" />
       </a>
     </div>
