--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- Start Navigation -->
 <nav class="navbar navbar-default logo-less small-pad navbar-sticky bootsnav">
   <!-- Start Top Search -->
