--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -97,7 +97,9 @@
                 </li>
               </ul>
             </li>
-            <li><a href="">Carte diplomatique</a></li>
+            <li>
+              <a href="">Carte diplomatique</a>
+            </li>
           </ul>
         </li>
         <li class="dropdown">
@@ -116,6 +118,33 @@
                 </li>
                 <li>
                   <a href="">Inflation</a>
+                </li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                >Finances publiques</a
+              >
+              <ul class="dropdown-menu">
+                <li><a href="">politique budgétaire</a></li>
+                <li>
+                  <a href="">Recettes totales et dons</a>
+                </li>
+                <li>
+                  <a href="">Dépenses totales et prêts nets</a>
+                </li>
+                <li class="dropdown">
+                  <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                    >Financement / Dette</a
+                  >
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a href="">Politique et stratégie d'endettemment</a>
+                    </li>
+                    <li>
+                      <a href="">Statistiques</a>
+                    </li>
+                  </ul>
                 </li>
               </ul>
             </li>
