--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -146,6 +146,19 @@
                     </li>
                   </ul>
                 </li>
+                <li class="dropdown">
+                  <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                    >Notation financière</a
+                  >
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a href="">Notation en devise</a>
+                    </li>
+                    <li>
+                      <a href="">Notation en monnaie locale</a>
+                    </li>
+                  </ul>
+                </li>
               </ul>
             </li>
           </ul>
