--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -152,7 +152,7 @@
                   >
                   <ul class="dropdown-menu">
                     <li>
-                      <a href="">Notation en devise</a>
+                      <a href="">Notation en devise2</a>
                     </li>
                     <li>
                       <a href="">Notation en monnaie locale</a>
