--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -152,12 +152,24 @@
                   >
                   <ul class="dropdown-menu">
                     <li>
-                      <a href="">Notation en devise2</a>
+                      <a href="">Notation en devise</a>
                     </li>
                     <li>
                       <a href="">Notation en monnaie locale</a>
                     </li>
                   </ul>
+                </li>
+              </ul>
+            </li>
+            <li><a href="">Finances publiques</a></li>
+            <li class="dropdown">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                >Secteur monétaitre</a
+              >
+              <ul class="dropdown-menu">
+                <li><a href="">Politique monétaire</a></li>
+                <li>
+                  <a href="">Statistiques monétaires</a>
                 </li>
               </ul>
             </li>
