--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -190,33 +190,71 @@
             Investissements</a
           >
           <ul class="dropdown-menu">
-            <li><a href="event-1.html">Event Version One</a></li>
-            <li><a href="event-2.html">Event Version Two</a></li>
+            <li><a href="">Environnement des affaires</a></li>
+            <li><a href="">Code des investissements</a></li>
+            <li><a href="">Codes sectoriels</a></li>
+            <li class="dropdown">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                >Opportunités</a
+              >
+              <ul class="dropdown-menu">
+                <li><a href="">Projets privés</a></li>
+                <li>
+                  <a href="">Projets PPP</a>
+                </li>
+              </ul>
+            </li>
+            <li><a href="">Statistiques</a></li>
           </ul>
+        </li>
+
+        <li>
+          <a href="">Pôles compétitifs</a>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-            >Pôles compétitifs</a
+            >Banques et finances</a
           >
+
           <ul class="dropdown-menu">
-            <li><a href="blog-standard.html">Blog Standard</a></li>
-            <li>
-              <a href="blog-left-sidebar.html">Blog Left Sidebar</a>
+            <li class="dropdown">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                >Banques</a
+              >
+              <ul class="dropdown-menu">
+                <li><a href="">Présentation</a></li>
+                <li>
+                  <a href="">Indicateurs</a>
+                </li>
+                <li>
+                  <a href="">Reglement de change</a>
+                </li>
+              </ul>
             </li>
-            <li>
-              <a href="blog-right-sidebar.html">Blog Right Sidebar</a>
+            <li class="dropdown">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                >Microfinance</a
+              >
+              <ul class="dropdown-menu">
+                <li><a href="">Présentation</a></li>
+                <li>
+                  <a href="">Microfinance indicators</a>
+                </li>
+              </ul>
             </li>
-            <li><a href="blog-single.html">Blog Single Standard</a></li>
-            <li>
-              <a href="blog-single-left-sidebar.html">Single Left Sidebar</a>
-            </li>
-            <li>
-              <a href="blog-single-right-sidebar.html">Single Right Sidebar</a>
+            <li><a href="">Finances publiques</a></li>
+            <li class="dropdown">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                >Secteur monétaitre</a
+              >
+              <ul class="dropdown-menu">
+                <li><a href="">Politique monétaire</a></li>
+                <li>
+                  <a href="">Statistiques monétaires</a>
+                </li>
+              </ul>
             </li>
           </ul>
-        </li>
-        <li>
-          <a href="contact.html">Banques et finances</a>
         </li>
       </ul>
     </div>
