--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -242,15 +242,24 @@
                 </li>
               </ul>
             </li>
-            <li><a href="">Finances publiques</a></li>
             <li class="dropdown">
               <a href="" class="dropdown-toggle" data-toggle="dropdown"
-                >Secteur monétaitre</a
+                >Assurances</a
               >
               <ul class="dropdown-menu">
-                <li><a href="">Politique monétaire</a></li>
+                <li><a href="">Présentation</a></li>
                 <li>
-                  <a href="">Statistiques monétaires</a>
+                  <a href="">Indicateurs</a>
+                </li>
+              </ul>
+            </li>
+            <li><a href=""></a>Inclusion financière</li>
+            <li class="dropdown">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown">BRVM</a>
+              <ul class="dropdown-menu">
+                <li><a href="">Présentation</a></li>
+                <li>
+                  <a href="">Performance</a>
                 </li>
               </ul>
             </li>
