--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -161,7 +161,7 @@
                 </li>
               </ul>
             </li>
-            <li><a href="">Finances publiques</a></li>
+            <li><a href="">Services extérieurs</a></li>
             <li class="dropdown">
               <a href="" class="dropdown-toggle" data-toggle="dropdown"
                 >Secteur monétaitre</a
