--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -253,7 +253,7 @@
                 </li>
               </ul>
             </li>
-            <li><a href=""></a>Inclusion financière</li>
+            <li><a href="">Inclusion financière</a></li>
             <li class="dropdown">
               <a href="" class="dropdown-toggle" data-toggle="dropdown">BRVM</a>
               <ul class="dropdown-menu">
