--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -180,9 +180,75 @@
             Activités sectorielles</a
           >
           <ul class="dropdown-menu">
-            <li><a href="advisor-carousel.html">Advisor Carousel</a></li>
-            <li><a href="advisor-grid.html">Advisor Grid</a></li>
-            <li><a href="advisor-details.html">Advisor Details</a></li>
+            <li class="dropdown">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                >Agriculture, élévage et pêche
+              </a>
+              <ul class="dropdown-menu">
+                <li><a href="">Agriculture industrielle</a></li>
+                <li>
+                  <a href="">Agriculture vivrière</a>
+                </li>
+                <li>
+                  <a href="">Elévage</a>
+                </li>
+                <li>
+                  <a href="">Pêche</a>
+                </li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                >Industries extratives</a
+              >
+              <ul class="dropdown-menu">
+                <li><a href="">Pétrole et gaz naturel</a></li>
+                <li>
+                  <a href="">Recettes totales et dons</a>
+                </li>
+                <li>
+                  <a href="">Dépenses totales et prêts nets</a>
+                </li>
+                <li class="dropdown">
+                  <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                    >Financement / Dette</a
+                  >
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a href="">Politique et stratégie d'endettemment</a>
+                    </li>
+                    <li>
+                      <a href="">Statistiques</a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="dropdown">
+                  <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                    >Notation financière</a
+                  >
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a href="">Notation en devise</a>
+                    </li>
+                    <li>
+                      <a href="">Notation en monnaie locale</a>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            <li><a href="">Services extérieurs</a></li>
+            <li class="dropdown">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                >Secteur monétaitre</a
+              >
+              <ul class="dropdown-menu">
+                <li><a href="">Politique monétaire</a></li>
+                <li>
+                  <a href="">Statistiques monétaires</a>
+                </li>
+              </ul>
+            </li>
           </ul>
         </li>
         <li class="dropdown">
