--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -203,22 +203,28 @@
               >
               <ul class="dropdown-menu">
                 <li><a href="">Pétrole et gaz naturel</a></li>
-                <li>
-                  <a href="">Recettes totales et dons</a>
-                </li>
-                <li>
-                  <a href="">Dépenses totales et prêts nets</a>
-                </li>
                 <li class="dropdown">
                   <a href="" class="dropdown-toggle" data-toggle="dropdown"
-                    >Financement / Dette</a
+                    >Minerais</a
                   >
                   <ul class="dropdown-menu">
                     <li>
-                      <a href="">Politique et stratégie d'endettemment</a>
+                      <a href="">Vue d'ensemble mine</a>
                     </li>
                     <li>
-                      <a href="">Statistiques</a>
+                      <a href="">Or</a>
+                    </li>
+                    <li>
+                      <a href="">Diamant</a>
+                    </li>
+                    <li>
+                      <a href="">Manganaise</a>
+                    </li>
+                    <li>
+                      <a href="">Nickel</a>
+                    </li>
+                    <li>
+                      <a href="">Autres</a>
                     </li>
                   </ul>
                 </li>
