--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -232,12 +232,52 @@
             </li>
             <li class="dropdown">
               <a href="" class="dropdown-toggle" data-toggle="dropdown"
-                >Secteur monétaitre</a
+                >Activités manufacturières</a
               >
               <ul class="dropdown-menu">
-                <li><a href="">Politique monétaire</a></li>
+                <li><a href="">Agroalimentaire</a></li>
                 <li>
-                  <a href="">Statistiques monétaires</a>
+                  <a href="">Produits pétroliers</a>
+                </li>
+                <li>
+                  <a href="">Autres Activités manufacturières</a>
+                </li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                >Energie et eau</a
+              >
+              <ul class="dropdown-menu">
+                <li><a href="">Electricité</a></li>
+                <li>
+                  <a href="">Eau</a>
+                </li>
+              </ul>
+            </li>
+            <li><a>Industries environnemantales</a></li>
+            <li class="dropdown">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown">BTP</a>
+              <ul class="dropdown-menu">
+                <li><a href="">Infrastructures</a></li>
+                <li class="dropdown">
+                  <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                    >Construction</a
+                  >
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a href="">Vue d'ensemble</a>
+                    </li>
+                    <li>
+                      <a href="">Architecture et maintenance</a>
+                    </li>
+                    <li>
+                      <a href="">Foncier et urbain</a>
+                    </li>
+                    <li>
+                      <a href="">Logement et cadre de vie</a>
+                    </li>
+                  </ul>
                 </li>
               </ul>
             </li>
