--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -281,6 +281,92 @@
                 </li>
               </ul>
             </li>
+            <li class="dropdown">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                >Commerce</a
+              >
+              <ul class="dropdown-menu">
+                <li><a href="">Commerce exterieur</a></li>
+                <li>
+                  <a href="">Commerce intérieur</a>
+                </li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                >Transport</a
+              >
+              <ul class="dropdown-menu">
+                <li><a href="">Vue d'ensemble</a></li>
+                <li>
+                  <a href="">Transport maritime</a>
+                </li>
+                <li>
+                  <a href="">Transport aérien</a>
+                </li>
+                <li>
+                  <a href="">Transport routier</a>
+                </li>
+                <li>
+                  <a href="">Transport ferroviaire</a>
+                </li>
+                <li>
+                  <a href="">Transport fluvio-lagunaire</a>
+                </li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                >Télécommunication</a
+              >
+              <ul class="dropdown-menu">
+                <li><a href="">Politique et organisation du secteur</a></li>
+                <li>
+                  <a href="">Infrastructures</a>
+                </li>
+                <li>
+                  <a href="">Indicateurs</a>
+                </li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                >Education et formation</a
+              >
+              <ul class="dropdown-menu">
+                <li><a href="">Préscolaire</a></li>
+                <li>
+                  <a href="">Primaire</a>
+                </li>
+                <li>
+                  <a href="">Secondaire</a>
+                </li>
+                <li>
+                  <a href="">Technique et formation professionnelle</a>
+                </li>
+                <li>
+                  <a href="">Enseignement supérieur</a>
+                </li>
+                <li>
+                  <a href="">Recherche scientifique</a>
+                </li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown"
+                >Santé et protection sociale</a
+              >
+              <ul class="dropdown-menu">
+                <li><a href="">Santé publique</a></li>
+                <li>
+                  <a href="">Santé privée</a>
+                </li>
+                <li>
+                  <a href="">Couverture maladie universelle</a>
+                </li>
+                <li><a>Emplois</a></li>
+              </ul>
+            </li>
           </ul>
         </li>
         <li class="dropdown">
