--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,442 +1,102 @@
 {% extends 'base.html' %} {% block content %}
-<section class="breadcrumb-area">
-  <div
-    class="breadcrumb-area-bg"
-    style="background-image: url(assets/images/breadcrumb/breadcrumb-1.jpg)"
-  ></div>
+
+<!-- Start Breadcrumb 
+    ============================================= -->
+<div
+  class="breadcrumb-area shadow dark bg-fixed text-center text-light"
+  style="background-image: url(assets/img/2440x1578.png)"
+>
   <div class="container">
     <div class="row">
-      <div class="col-xl-12">
-        <div class="inner-content">
-          <div
-            class="breadcrumb-menu"
-            data-aos="fade-down"
-            data-aos-easing="linear"
-            data-aos-duration="1500"
-          >
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li class="active">blog Single</li>
-            </ul>
-          </div>
-
-          <div
-            class="title"
-            data-aos="fade-up"
-            data-aos-easing="linear"
-            data-aos-duration="1500"
-          >
-            <h2>Blog Single</h2>
-          </div>
-        </div>
+      <div class="col-lg-12 col-md-12">
+        <h1>Single Left Sidebar</h1>
+        <ul class="breadcrumb">
+          <li>
+            <a href="#"><i class="fas fa-home"></i> Blog</a>
+          </li>
+          <li><a href="#">Single</a></li>
+          <li class="active">Left Sidebar</li>
+        </ul>
       </div>
     </div>
   </div>
-</section>
-<!--End breadcrumb area-->
+</div>
+<!-- End Breadcrumb -->
 
-<!--Start Blog Page Three-->
-<section class="blog-details-page">
+<!-- Start Blog
+  ============================================= -->
+<div class="blog-area single full-blog left-sidebar full-blog default-padding">
   <div class="container">
     <div class="row">
-      <div class="col-xl-8 col-lg-12">
-        <div class="blog-details-content">
-          <div class="single-blog-style1 single-blog-style1--instyle3">
-            <div class="single-blog-style1__inner">
-              <div class="img-holder">
-                <div class="inner">
-                  <img src="assets/images/blog/blog-v3-1.jpg" alt="" />
-                </div>
-                <!--
-                <div class="date-box">
-                  <h6>
-                    16<br />
-                    <span>Nov</span>
-                  </h6>
-                </div>
-                -->
+      <div class="blog-items">
+        <div class="blog-content col-md-8">
+          <div class="single-item">
+            <div class="item">
+              <!-- Start Post Thumb -->
+              <div class="thumb">
+                <a href="#">
+                  <img src="assets/img/1500x700.png" alt="Thumb" />
+                </a>
               </div>
-              <div class="text-holder">
-                <!--
-                <ul class="meta-info">
-                  <li>
-                    <i class="fa fa-user" aria-hidden="true"></i>
-                    <a href="#">by Admin</a>
-                  </li>
-                  <li>
-                    <i class="fa fa-comment-o" aria-hidden="true"></i>
-                    <a href="#">02 Comments</a>
-                  </li>
-                </ul>
-                -->
-                <div class="text-inner">
-                  <h3 class="blog-title">{{ post.title }}</h3>
+              <!-- Start Post Thumb -->
+
+              <div class="info">
+                <div class="meta">
+                  <ul>
+                    <li>
+                      <a href="#"><i class="fas fa-user"></i> Admin</a>
+                    </li>
+                    <li><i class="fas fa-calendar-alt"></i> 14 Jun, 2020</li>
+                  </ul>
                 </div>
-                <div class="text">
+
+                <div class="content">
+                  <div class="tags share">
+                    <div class="items">
+                      <a href="#">Event</a>
+                      <a href="#">Education</a>
+                    </div>
+                    <div class="social-share">
+                      <ul>
+                        <li>
+                          <i class="fas fa-share-alt"></i>
+                        </li>
+                        <li class="facebook">
+                          <a href="#">
+                            <i class="fab fa-facebook-f"></i>
+                          </a>
+                        </li>
+                        <li class="twitter">
+                          <a href="#">
+                            <i class="fab fa-twitter"></i>
+                          </a>
+                        </li>
+                        <li class="linkedin">
+                          <a href="#">
+                            <i class="fab fa-linkedin-in"></i>
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <h3>{{ post.title }}</h3>
                   <p>{{ post.body | safe }}</p>
                 </div>
               </div>
             </div>
           </div>
+
+          <!-- Start Blog Comment -->
+
+          <!-- End Comments Form -->
         </div>
+        <!-- Start Sidebar -->
+        {% include 'include/sidebar.html' %}
+        <!-- End Start Sidebar -->
       </div>
-
-      <!--Start Thm Sidebar Box-->
-      <div class="col-xl-4 col-lg-12">
-        <div class="thm-sidebar-box">
-          <div class="sidebar-search-box">
-            <form class="search-form" action="#">
-              <input placeholder="Search" type="text" />
-              <button type="submit">
-                <i class="fa fa-search" aria-hidden="true"></i>
-              </button>
-            </form>
-          </div>
-          <!--
-          <div class="single-sidebar-box">
-            <div class="sidebar-title">
-              <h3>Recent Posts</h3>
-            </div>
-            <div class="sidebar-blog-post">
-              <ul class="blog-post">
-                <li>
-                  <div class="inner">
-                    <div class="img-box">
-                      <img
-                        src="assets/images/sidebar/news-1.jpg"
-                        alt="Awesome Image"
-                      />
-                      <div class="overlay-content">
-                        <a href="#"
-                          ><i class="fa fa-link" aria-hidden="true"></i
-                        ></a>
-                      </div>
-                    </div>
-                    <div class="title-box">
-                      <div class="admin">
-                        <span class="icon-user"></span> by Admin
-                      </div>
-                      <h4>
-                        <a href="#"
-                          >Integer tristique odio<br />
-                          vitae lorem gra</a
-                        >
-                      </h4>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="inner">
-                    <div class="img-box">
-                      <img
-                        src="assets/images/sidebar/news-2.jpg"
-                        alt="Awesome Image"
-                      />
-                      <div class="overlay-content">
-                        <a href="#"
-                          ><i class="fa fa-link" aria-hidden="true"></i
-                        ></a>
-                      </div>
-                    </div>
-                    <div class="title-box">
-                      <div class="admin">
-                        <span class="icon-user"></span> by Admin
-                      </div>
-                      <h4>
-                        <a href="#"
-                          >Integer tristique odio<br />
-                          vitae lorem gra</a
-                        >
-                      </h4>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="inner">
-                    <div class="img-box">
-                      <img
-                        src="assets/images/sidebar/news-3.jpg"
-                        alt="Awesome Image"
-                      />
-                      <div class="overlay-content">
-                        <a href="#"
-                          ><i class="fa fa-link" aria-hidden="true"></i
-                        ></a>
-                      </div>
-                    </div>
-                    <div class="title-box">
-                      <div class="admin">
-                        <span class="icon-user"></span> by Admin
-                      </div>
-                      <h4>
-                        <a href="#"
-                          >Integer tristique odio<br />
-                          vitae lorem gra</a
-                        >
-                      </h4>
-                    </div>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-          -->
-          <div class="single-sidebar-box">
-            <ul class="sidebar-categories-box">
-              {% for post in similar_posts %}
-              <li>
-                <a href="{% url 'post_detail' post.slug %}">{{post.title}}</a>
-              </li>
-              {% endfor %}
-            </ul>
-          </div>
-        </div>
-      </div>
-      <!--End Thm Sidebar Box-->
-    </div>
-  </div>
-</section>
-<!--Footer-->
-<div class="bottom-parallax">
-  <!--Start footer area -->
-  <footer class="footer-area">
-    <div
-      class="footer-area-bg"
-      style="background-image: url(assets/images/resources/footer-bg-1.png)"
-    ></div>
-
-    <div class="footer-top">
-      <div class="container">
-        <div class="subscribe-content-box">
-          <div class="row">
-            <div class="col-xl-6 col-lg-6">
-              <div class="subscribe-title">
-                <div class="icon">
-                  <span class="icon-open-envelope"></span>
-                </div>
-                <div class="inner-title">
-                  <h3>
-                    Subscribe Now to Get<br />
-                    Latest Updates
-                  </h3>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-6 col-lg-6">
-              <div class="subscribe-box">
-                <form class="subscribe-form" action="#">
-                  <input
-                    type="email"
-                    name="email"
-                    placeholder="Email address"
-                  />
-                  <button class="btn-one" type="submit">
-                    <span class="txt"><i class="icon-send"></i></span>
-                  </button>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!--Start Footer-->
-    <div class="footer">
-      <div class="container">
-        <div class="row text-right-rtl">
-          <!--Start single footer widget-->
-          <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
-            <div class="single-footer-widget marbtm50">
-              <div class="title">
-                <h3>About</h3>
-              </div>
-              <div class="our-company-info">
-                <div class="text-box">
-                  <p>
-                    Lorem ipsum dolor sit amet, consect etur adi pisicing elit
-                    sed do eiusmod tempor incididunt ut labore.
-                  </p>
-                </div>
-                <div class="footer-social-link">
-                  <ul class="clearfix">
-                    <li>
-                      <a href="#"><i class="icon-twitter"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="icon-facebook"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="icon-pinterest"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="icon-instagram"></i></a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!--End single footer widget-->
-
-          <!--Start single footer widget-->
-          <div class="col-xl-2 col-lg-6 col-md-6 col-sm-12">
-            <div class="single-footer-widget marbtm50">
-              <div class="title">
-                <h3>Links</h3>
-              </div>
-              <div class="footer-widget-links">
-                <ul>
-                  <li><a href="contact.html">Request Pickup</a></li>
-                  <li><a href="about.html">About Us</a></li>
-                  <li><a href="about.html">Management</a></li>
-                  <li><a href="services.html">Start Service</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!--End single footer widget-->
-
-          <!--Start single footer widget-->
-          <div class="col-xl-2 col-lg-6 col-md-6 col-sm-12">
-            <div class="single-footer-widget margin-left40">
-              <div class="title">
-                <h3>Services</h3>
-              </div>
-              <div class="footer-widget-links">
-                <ul>
-                  <li>
-                    <a href="services-single-1.html">Grocery Store</a>
-                  </li>
-                  <li>
-                    <a href="services-single-2.html">Hotel & Restaurant</a>
-                  </li>
-                  <li>
-                    <a href="services-single-3.html">Medical & Hospital</a>
-                  </li>
-                  <li>
-                    <a href="services-single-4.html">Waste Removal</a>
-                  </li>
-                  <li><a href="services-single-1.html">Zero Waste</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!--End single footer widget-->
-
-          <!--Start single footer widget-->
-          <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
-            <div
-              class="single-footer-widget single-footer-widget--contact-info-box pdtop50"
-            >
-              <div class="title">
-                <h3>Contact</h3>
-              </div>
-              <div class="footer-widget-contact-info">
-                <ul>
-                  <li>
-                    <div class="inner">
-                      <div class="icon phone">
-                        <span class="icon-telephone"></span>
-                      </div>
-                      <div class="text">
-                        <p>
-                          <a href="tel:123456789">+1-(246) 333-0089</a>
-                        </p>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="inner">
-                      <div class="icon">
-                        <span class="icon-email-1"></span>
-                      </div>
-                      <div class="text">
-                        <p>
-                          <a href="mailto:yourmail@email.com"
-                            >needhelp@company.com</a
-                          >
-                        </p>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="inner">
-                      <div class="icon mapmarker">
-                        <span class="icon-pin-1"></span>
-                      </div>
-                      <div class="text">
-                        <p>
-                          88 broklyn golden street line<br />
-                          New York, USA
-                        </p>
-                      </div>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!--End single footer widget-->
-        </div>
-      </div>
-    </div>
-    <!--End Footer-->
-    <div class="footer-bottom">
-      <div class="container">
-        <div class="bottom-inner">
-          <div class="copyright">
-            <p>
-              Copyright &copy; 2022 <a href="index.html">Westo</a> All Rights
-              Reserved.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
-  <!--End footer area-->
-</div>
-
-<button class="scroll-top scroll-to-target" data-target="html">
-  <span class="flaticon-up-arrow"></span>
-</button>
-
-<!-- search-popup -->
-<div id="search-popup" class="search-popup">
-  <div class="close-search"><i class="icon-close"></i></div>
-  <div class="popup-inner">
-    <div class="overlay-layer"></div>
-    <div class="search-form">
-      <form method="post" action="index.html">
-        <div class="form-group">
-          <fieldset>
-            <input
-              type="search"
-              class="form-control"
-              name="search-input"
-              value=""
-              placeholder="Search Here"
-              required
-            />
-            <input
-              type="submit"
-              value="Search Now!"
-              class="theme-btn style-four"
-            />
-          </fieldset>
-        </div>
-      </form>
-      <h3>Recent Search Keywords</h3>
-      <ul class="recent-searches">
-        <li><a href="index.html">waste</a></li>
-        <li><a href="index.html">Dumpster</a></li>
-        <li><a href="index.html">Zerowaste</a></li>
-        <li><a href="index.html">Garbage</a></li>
-        <li><a href="index.html">trash</a></li>
-      </ul>
     </div>
   </div>
 </div>
+<!-- End Blog -->
+
 {% endblock %}
