--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,27 +1,5 @@
-{% extends 'base.html' %} {% block content %}
-
-<!-- Start Breadcrumb 
-    ============================================= -->
-<div
-  class="breadcrumb-area shadow dark bg-fixed text-center text-light"
-  style="background-image: url(assets/img/2440x1578.png)"
->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 col-md-12">
-        <h1>Single Left Sidebar</h1>
-        <ul class="breadcrumb">
-          <li>
-            <a href="#"><i class="fas fa-home"></i> Blog</a>
-          </li>
-          <li><a href="#">Single</a></li>
-          <li class="active">Left Sidebar</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- End Breadcrumb -->
+{% extends 'base_detail.html' %} {% block content %} {% include
+'include/banner_detail.html' %}
 
 <!-- Start Blog
   ============================================= -->
