--- a/templates/base_detail.html
+++ b/templates/base_detail.html
@@ -67,7 +67,7 @@
       {% include 'include/topbar.html' %}
     </div>
     <header id="home">{% include 'include/header.html' %}</header>
-    {% include 'include/banner.html' %} {%block content %} {% endblock %}
+    {%block content %} {% endblock %}
     <footer class="bg-light">{% include 'include/footer.html' %}</footer>
 
     <script src="{% static 'assets/js/jquery-1.12.4.min.js' %}"></script>
