--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,5 +1,4 @@
-{% extends 'base_detail.html' %} {% block content %} {% include
-'include/banner_detail.html' %}
+{% extends 'base_detail.html' %} {% block content %}
 
 <!-- Start Blog
   ============================================= -->
