--- a/templates/include/sidebar.html
+++ b/templates/include/sidebar.html
@@ -1,42 +1,44 @@
-<div class="sidebar col-md-4">
-  <aside>
-    <div class="sidebar-item search">
-      <div class="title">
-        <h4>Search</h4>
+<div class="col-md-2 col-sm-6 item equal-height">
+  <div class="sidebar col-md-4">
+    <aside>
+      <div class="sidebar-item search">
+        <div class="title">
+          <h4>Search</h4>
+        </div>
+        <div class="sidebar-info">
+          <form>
+            <input type="text" class="form-control" />
+            <input type="submit" value="search" />
+          </form>
+        </div>
       </div>
-      <div class="sidebar-info">
-        <form>
-          <input type="text" class="form-control" />
-          <input type="submit" value="search" />
-        </form>
-      </div>
-    </div>
 
-    <div class="f-item link">
-      <h4>Categories</h4>
-      <ul>
-        <li>
-          <a href="#"><i class="ti-angle-right"></i> All Courses</a>
-        </li>
-        <li>
-          <a href="#"><i class="ti-angle-right"></i> Event</a>
-        </li>
-        <li>
-          <a href="#"><i class="ti-angle-right"></i> Digital Marketing</a>
-        </li>
-        <li>
-          <a href="#"><i class="ti-angle-right"></i> Design & Branding</a>
-        </li>
-        <li>
-          <a href="#"><i class="ti-angle-right"></i> Storytelling</a>
-        </li>
-        <li>
-          <a href="#"><i class="ti-angle-right"></i> Education</a>
-        </li>
-        <li>
-          <a href="#"><i class="ti-angle-right"></i> Geography</a>
-        </li>
-      </ul>
-    </div>
-  </aside>
+      <div class="f-item link">
+        <h4>Categories</h4>
+        <ul>
+          <li>
+            <a href="#"><i class="ti-angle-right"></i> All Courses</a>
+          </li>
+          <li>
+            <a href="#"><i class="ti-angle-right"></i> Event</a>
+          </li>
+          <li>
+            <a href="#"><i class="ti-angle-right"></i> Digital Marketing</a>
+          </li>
+          <li>
+            <a href="#"><i class="ti-angle-right"></i> Design & Branding</a>
+          </li>
+          <li>
+            <a href="#"><i class="ti-angle-right"></i> Storytelling</a>
+          </li>
+          <li>
+            <a href="#"><i class="ti-angle-right"></i> Education</a>
+          </li>
+          <li>
+            <a href="#"><i class="ti-angle-right"></i> Geography</a>
+          </li>
+        </ul>
+      </div>
+    </aside>
+  </div>
 </div>
