--- a/templates/include/sidebar.html
+++ b/templates/include/sidebar.html
@@ -1,44 +1,64 @@
-<div class="col-md-2 col-sm-6 item equal-height">
-  <div class="sidebar col-md-4">
-    <aside>
-      <div class="sidebar-item search">
-        <div class="title">
-          <h4>Search</h4>
-        </div>
-        <div class="sidebar-info">
-          <form>
-            <input type="text" class="form-control" />
-            <input type="submit" value="search" />
-          </form>
-        </div>
+<div class="sidebar col-md-4">
+  <aside>
+    <div class="sidebar-item search">
+      <div class="title">
+        <h4>Search</h4>
       </div>
-
-      <div class="f-item link">
-        <h4>Categories</h4>
-        <ul>
-          <li>
-            <a href="#"><i class="ti-angle-right"></i> All Courses</a>
-          </li>
-          <li>
-            <a href="#"><i class="ti-angle-right"></i> Event</a>
-          </li>
-          <li>
-            <a href="#"><i class="ti-angle-right"></i> Digital Marketing</a>
-          </li>
-          <li>
-            <a href="#"><i class="ti-angle-right"></i> Design & Branding</a>
-          </li>
-          <li>
-            <a href="#"><i class="ti-angle-right"></i> Storytelling</a>
-          </li>
-          <li>
-            <a href="#"><i class="ti-angle-right"></i> Education</a>
-          </li>
-          <li>
-            <a href="#"><i class="ti-angle-right"></i> Geography</a>
-          </li>
-        </ul>
+      <div class="sidebar-info">
+        <form>
+          <input type="text" class="form-control" />
+          <input type="submit" value="search" />
+        </form>
       </div>
-    </aside>
-  </div>
+    </div>
+    <div class="sidebar-item recent-post">
+      <div class="title">
+        <h4>Recent Post</h4>
+      </div>
+      <ul>
+        <li>
+          <div class="thumb">
+            <a href="#">
+              <img src="assets/img/800x800.png" alt="Thumb" />
+            </a>
+          </div>
+          <div class="info">
+            <a href="#">Participate in staff meetingness manage dedicated</a>
+            <div class="meta-title">
+              <span class="post-date">12 Feb, 2020</span> - By
+              <a href="#">Author</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="thumb">
+            <a href="#">
+              <img src="assets/img/800x800.png" alt="Thumb" />
+            </a>
+          </div>
+          <div class="info">
+            <a href="#">Future Plan & Strategy for Consutruction </a>
+            <div class="meta-title">
+              <span class="post-date">12 Feb, 2020</span> - By
+              <a href="#">Author</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="thumb">
+            <a href="#">
+              <img src="assets/img/800x800.png" alt="Thumb" />
+            </a>
+          </div>
+          <div class="info">
+            <a href="#">Melancholy particular devonshire alteration</a>
+            <div class="meta-title">
+              <span class="post-date">12 Feb, 2020</span> - By
+              <a href="#">Author</a>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </aside>
 </div>
