--- a/templates/detail.html
+++ b/templates/detail.html
@@ -74,5 +74,5 @@
 
 <!-- Start Footer 
   ============================================= -->
-{% include 'footer.html' %}
+{% include 'include/footer.html' %}
 <!-- End Footer -->
