--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,5 +1,7 @@
+{% extends 'base_detail.html' %} {% block content %}
 <!-- Start Blog
     ============================================= -->
+
 <div class="blog-area single full-blog right-sidebar full-blog default-padding">
   <div class="container">
     <div class="row">
@@ -76,3 +78,4 @@
   ============================================= -->
 {% include 'include/footer.html' %}
 <!-- End Footer -->
+{% endblock %}
