--- a/templates/include/banner_detail.html
+++ b/templates/include/banner_detail.html
@@ -7,7 +7,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 col-md-12">
-        <h1>Single Left Sidebar</h1>
+        <h1>{{post.title}}</h1>
         <ul class="breadcrumb">
           <li>
             <a href="#"><i class="fas fa-home"></i> Blog</a>
