--- a/templates/detail.html
+++ b/templates/detail.html
@@ -27,10 +27,7 @@
                       <a href="#"><i class="fas fa-user"></i> Admin</a>
                     </li>
                     -->
-                    <li>
-                      <i class="fas fa-calendar-alt"></i>Publié le {{
-                      post.date_added }}
-                    </li>
+                    <li>{{ post.title }}</li>
                   </ul>
                 </div>
 
