--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -4,24 +4,33 @@
       <!-- Single item -->
       <div class="col-md-4 col-sm-6 item equal-height">
         <div class="f-item about">
-          <h4>About</h4>
+          <h4>MINISTÈRE DE L'ECONOMIE, DU PLAN ET DU DÉVELOPPEMENT</h4>
           <p>
-            Excellence decisively nay man yet impression for contrasted
-            remarkably. There spoke happy for you are out. Fertile how old
-            address.
+            Abidjan-Plateau Immeuble SCIAM, 16e étage, BP V 165 Abidjan.
+            <br />
+            Tél : (+225) 27 20 20 08 42
+            <br />
+            Tél : (+225) 27 20 20 08 26
+          </p>
+          <h4>DIRECTION GÉNÉRALE DE L'ECONOMIE</h4>
+          <p>
+            Abidjan-Plateau Immeuble SCIAM, 6e étage.
+            <br />
+            Tél : (+225) 27 20 20 09 09
+            <br />
+            Tél : (+225) 27 20 20 09 03
           </p>
           <ul>
             <li>
               <p>
                 Email
                 <span
-                  ><a href="mailto:info@example.com">info@example.com</a></span
+                  ><a href="mailto:info@example.com"
+                    >info@economie-ivoirienne.ci</a
+                  ></span
                 >
               </p>
             </li>
-            <li>
-              <p>Office <span>123 6th St. Melbourne, FL 32904</span></p>
-            </li>
           </ul>
         </div>
       </div>
@@ -30,30 +39,7 @@
       <!-- Single item -->
       <div class="col-md-2 col-sm-6 item equal-height">
         <div class="f-item link">
-          <h4>Categories</h4>
-          <ul>
-            <li>
-              <a href="#"><i class="ti-angle-right"></i> All Courses</a>
-            </li>
-            <li>
-              <a href="#"><i class="ti-angle-right"></i> Event</a>
-            </li>
-            <li>
-              <a href="#"><i class="ti-angle-right"></i> Digital Marketing</a>
-            </li>
-            <li>
-              <a href="#"><i class="ti-angle-right"></i> Design & Branding</a>
-            </li>
-            <li>
-              <a href="#"><i class="ti-angle-right"></i> Storytelling</a>
-            </li>
-            <li>
-              <a href="#"><i class="ti-angle-right"></i> Education</a>
-            </li>
-            <li>
-              <a href="#"><i class="ti-angle-right"></i> Geography</a>
-            </li>
-          </ul>
+          <h4>ANNUAIRE DES SERVICES</h4>
         </div>
       </div>
       <!-- End Single item -->
@@ -61,25 +47,38 @@
       <!-- Single item -->
       <div class="col-md-2 col-sm-6 item equal-height">
         <div class="f-item link">
-          <h4>Support</h4>
+          <h4>Liens utiles</h4>
           <ul>
             <li>
-              <a href="#"><i class="ti-angle-right"></i> Documentation</a>
+              <a href="#"
+                ><i class="ti-angle-right"></i> https://finances.gouv.ci
+              </a>
             </li>
             <li>
-              <a href="#"><i class="ti-angle-right"></i> Forums</a>
+              <a href="#"
+                ><i class="ti-angle-right"></i> https://www.dge.gouv.ci
+              </a>
             </li>
             <li>
-              <a href="#"><i class="ti-angle-right"></i> Language Packs</a>
+              <a href="#"
+                ><i class="ti-angle-right"></i> https://budget.gouv.ci
+              </a>
             </li>
             <li>
-              <a href="#"><i class="ti-angle-right"></i> Release Status</a>
+              <a href="#"
+                ><i class="ti-angle-right"></i> https://www.cepici.ci
+              </a>
             </li>
             <li>
-              <a href="#"><i class="ti-angle-right"></i> LearnPress</a>
+              <a href="#"><i class="ti-angle-right"></i> https://www.cci.ci </a>
             </li>
             <li>
-              <a href="#"><i class="ti-angle-right"></i> Feedback</a>
+              <a href="#"><i class="ti-angle-right"></i> https://www.ins.ci </a>
+            </li>
+            <li>
+              <a href="#"
+                ><i class="ti-angle-right"></i> https://www.tresor.gouv.ci
+              </a>
             </li>
           </ul>
         </div>
@@ -89,69 +88,7 @@
       <!-- Single item -->
       <div class="col-md-4 col-sm-6 item equal-height">
         <div class="f-item popular-courses">
-          <h4>Popular Courses</h4>
-          <ul>
-            <li>
-              <div class="thumb">
-                <a href="#">
-                  <img src="assets/img/800x800.png" alt="Thumb" />
-                </a>
-              </div>
-              <div class="info">
-                <a href="#">Subjects allied to Creative arts and design</a>
-                <ul class="meta">
-                  <li>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-                  </li>
-                  <li>(128) enrolled</li>
-                </ul>
-              </div>
-            </li>
-            <li>
-              <div class="thumb">
-                <a href="#">
-                  <img src="assets/img/800x800.png" alt="Thumb" />
-                </a>
-              </div>
-              <div class="info">
-                <a href="#">Business and administrative subjects</a>
-                <ul class="meta">
-                  <li>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                  </li>
-                  <li>(98) enrolled</li>
-                </ul>
-              </div>
-            </li>
-            <li>
-              <div class="thumb">
-                <a href="#">
-                  <img src="assets/img/800x800.png" alt="Thumb" />
-                </a>
-              </div>
-              <div class="info">
-                <a href="#">Business and administrative subjects</a>
-                <ul class="meta">
-                  <li>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-                  </li>
-                  <li>(688) enrolled</li>
-                </ul>
-              </div>
-            </li>
-          </ul>
+          <h4>ACTIVITÉS DU MARCHÉ BOURSIER</h4>
         </div>
       </div>
       <!-- End Single item -->
@@ -164,10 +101,11 @@
     <div class="row">
       <div class="col-md-6">
         <p>
-          &copy; Copyright 2020. All Rights Reserved by
-          <a href="#"> validtemplates</a>
+          &copy; Copyright 2024. Portail d'Informations et de Promotion de
+          l'Economie de Côte d'Ivoire
         </p>
       </div>
+      <!--
       <div class="col-md-6 text-right link">
         <ul>
           <li>
@@ -181,6 +119,7 @@
           </li>
         </ul>
       </div>
+      -->
     </div>
   </div>
 </div>
