--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -36,16 +36,17 @@
       </div>
       <!-- End Single item -->
 
-      <!-- Single item -->
+      <!-- Single item
       <div class="col-md-2 col-sm-6 item equal-height">
         <div class="f-item link">
           <h4>ANNUAIRE DES SERVICES</h4>
         </div>
       </div>
+       -->
       <!-- End Single item -->
 
       <!-- Single item -->
-      <div class="col-md-2 col-sm-6 item equal-height">
+      <div class="col-md-3 col-sm-6 item equal-height">
         <div class="f-item link">
           <h4>Liens utiles</h4>
           <ul>
@@ -86,7 +87,7 @@
       <!-- End Single item -->
 
       <!-- Single item -->
-      <div class="col-md-4 col-sm-6 item equal-height">
+      <div class="col-md-5 col-sm-6 item equal-height">
         <div class="f-item popular-courses">
           <h4>ACTIVITÉS DU MARCHÉ BOURSIER</h4>
         </div>
