--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -1,4 +1,7 @@
-<div class="container" style="margin-top: -150px">
+<div
+  class="container"
+  style="margin-top: -150px; background-color: orange; color: white"
+>
   <div class="f-items default-padding">
     <div class="row">
       <!-- Single item -->
@@ -100,7 +103,7 @@
 <div class="footer-bottom" style="margin-top: -100px">
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-8">
         <p>
           &copy; Copyright 2024. Portail d'Informations et de Promotion de
           l'Economie de Côte d'Ivoire
