--- a/templates/include/topbar.html
+++ b/templates/include/topbar.html
@@ -3,7 +3,7 @@
     <div class="col-md-4 logo-box">
       <div class="logo">
         <a href="index.html"
-          ><img src="assets/img/logo-light.png" alt="Thumb"
+          ><img src="{% static 'assets/img/logo-light.png' %}" alt="Thumb"
         /></a>
       </div>
     </div>
@@ -11,16 +11,13 @@
       <div class="info">
         <ul>
           <li>
-            <i class="fas fa-copy"></i> Total courses:
-            <strong>23400</strong>
+            <i class="fas fa-copy"></i>Ministère de l'Economie du Plan et du
+            Développement
           </li>
+          <li><i class="fas fa-user-shield"></i> A propos de nous:</li>
           <li>
-            <i class="fas fa-user-shield"></i> Instructor:
-            <strong>655</strong>
-          </li>
-          <li>
-            <i class="fas fa-phone"></i> Help Line:
-            <strong>+123 456 7890</strong>
+            <i class="fas fa-phone"></i>
+            <strong>+225 27 20 20 08 42</strong>
           </li>
         </ul>
       </div>
