--- a/templates/include/topbar.html
+++ b/templates/include/topbar.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-4 logo-box">
       <div class="logo">
-        <a href="index.html"
+        <a href="{% url 'index' %}"
           ><img src="{% static 'assets/img/logo-light.png' %}" alt="Thumb"
         /></a>
       </div>
