--- a/templates/include/banner.html
+++ b/templates/include/banner.html
@@ -8,6 +8,7 @@
         <!--
         <h3>MINISTERE DE L'ECONOMIE DU PLAN ET DU DEVELOPPEMENT</h3>
         -->
+        <h1>PORTAIL D'INFORMATION ET DE PROMOTION DE L'ECONOMIE IVOIRIENNE</h1>
         <ul class="breadcrumb">
           <!--
           <li>
@@ -15,11 +16,7 @@
           </li>
           <li><a href="#">Pages</a></li>
           -->
-          <li class="active">
-            <h2>
-              PORTAIL D'INFORMATION ET DE PROMOTION DE L'ECONOMIE IVOIRIENNE
-            </h2>
-          </li>
+          <li class="active"></li>
         </ul>
       </div>
     </div>
