--- a/templates/include/topbar.html
+++ b/templates/include/topbar.html
@@ -15,7 +15,7 @@
             <i class="fas fa-copy"></i>Ministère de l'Economie du Plan et du
             Développement
           </li>
-          <li><i class="fas fa-user-shield"></i> A propos de nous:</li>
+          <li><i class="fas fa-user-shield"></i> A propos de nous</li>
           <li>
             <i class="fas fa-phone"></i>
             <strong>+225 27 20 20 08 42</strong>
